<resources>
    <string name="app_name">JOTracker</string>
    <string name="apiKeyDebug">0ZB5UZisnLB9GkD9Sz-NUX5Gg5vLhfX00AdMONg</string>
    <string name="apiKeyRelease">0ZB5UZisnLB9BrSHTbOhUscdlzU5u62B_knCDJQ</string>
    <string name="latitude">Lat:</string>
    <string name="longitude">Long:</string>
    <string name="date">Date:</string>
    <string name="hour">Hour:</string>
    <string name="imei">IMEI:</string>
    <string name="clear">Clear</string>
    <string name="settings">Settings</string>
    <string name="trackers">Trackers</string>
    <string name="zoom_in">+ Zoom in</string>
    <string name="zoom_out">- Zoom out</string>
    <string name="trafic">Traffic</string>
    <string name="clear_map">Clear Map</string>
    <string name="satellite">Satellite</string>
    <string name="street_view">Street View</string>
    <string name="tracker_add">Add new tracker</string>
    <string name="tracker_imei">IMEI:</string>
    <string name="tracker_vehicle">Vehicle:</string>
    <string name="tracker_description">Description:</string>
    <string name="tracker_plate">Plate:</string>
    <string name="tracker_password">Password:</string>
    <string name="tracker_phone">Phone:</string>
    <string name="tracker_new">New</string>
    <string name="button_add">Save</string>
    <string name="button_back">Back</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_search">Search</string>
    <string name="button_save">Save</string>
    <string name="button_clear">Clear</string>
    <string name="tracker_edit">Tracker edit</string>
    <string name="tracker_settings">Tracker settings:</string>
    <string name="tracker_commands">Tracker commands by SMS:</string>
    <string name="tracker_operation_mode">Operation mode:</string>
    <string name="tracker_mode_GPRS">GPRS</string>
    <string name="tracker_mode_SMS">SMS</string>
    <string name="tracker_chage_password">Password change:</string>
    <string name="tracker_apn_settings">APN Settings (GPRS):</string>
    <string name="tracker_apn_user">APN User:</string>
    <string name="tracker_apn_password">APN Password:</string>
    <string name="tracker_tcp_ip_settings">TCP/IP Settings (GPRS):</string>
    <string name="tracker_ip_address">IP Address:</string>
    <string name="tracker_tcp_port">TCP Port:</string>
    <string name="tracker_apn_name">APN Name:</string>
    <string name="no_data">No data.</string>
    <string name="phoneno_info">Phone Number</string>
    <string name="message_info">SMS Message</string>
    <string name="send_binarysms">Send binary SMS (to port 8091)</string>
    <string name="button_ok">OK</string>
    <string name="tracker_add_success">Tracker successfully registered!</string>
    <string name="tracker_add_fail">Failed to add new tracker, tracker already registered!</string>
    <string name="execption">Exception</string>
    <string name="tracker_update_success">Tracker successfully updated!</string>
    <string name="delete_all">You want to delete all records?</string>
    <string name="alert">Alert!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="action">Action</string>
    <string name="see_in_map">See on the map</string>
    <string name="see_address">See address</string>
    <string name="delete_this">You want delete this record?</string>
    <string name="delete_register">You want to delete this record?</string>
    <string name="delete_success">Successfully deleted!</string>
    <string name="address">Address:</string>
    <string name="loading">Loading</string>
    <string name="ok">OK</string>
    <string name="tab_historic">Historic</string>
    <string name="tab_map">Map</string>
    <string name="tab_trackers">Trackers</string>
    <string name="tab_about">About</string>
    <string name="speed">Speed:</string>
    <string name="date_hour">Date/hour:</string>
    <string name="select_operation_mode">Select operation mode!</string>
    <string name="new_pass_not_equal">New password has to be different the current password.</string>
    <string name="new_pass_not_empty">New password can not be empty.</string>
    <string name="information">Information:</string>
    <string name="sms_success">SMS sended success!</string>
    <string name="sms_fail">Failure in sending SMS!</string>
    <string name="select_one_tracker">Select on tracker</string>
    <string name="cancel">Cancel</string>
    <string name="tracker_locate">GPS location</string>
    <string name="tracker_call">Tracker call</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="my_address">My address</string>
    <string name="sms_new">New SMS received!</string>
    <string name="sms_no_service">Failure to send SMS, no service!</string>
    <string name="sms_pdu_null">Failure to send SMS, pdu null!</string>
    <string name="sms_radio_off">Failure to send SMS, radio off!</string>
    <string name="sms_delivered">SMS delivered!</string>
    <string name="sms_not_delivered">SMS not delivered!</string>
    <string name="new_vehicle">Novo Ve�culo</string>
    <string name="empty">Em branco</string>
    <string name="not_tracker_in_database">No tracker account yet!</string>
    <string name="fill_all_fields">Fill in all fields!</string>
    <string name="add_new_tracker">Want to add a new tracker?</string>
    <string name="new_tracker">New tracker!</string>
    <string name="phone_not_valid">Number of invalid phone!</string>
    <string name="select_on_option">Select an option!</string>
    <string name="option_manual">Manual</string>
    <string name="option_automatic">Automatic</string>
    <string name="add_automatic">Add automatic</string>
    <string name="enter_number_phone">Enter the phone number tracker.</string>
    <string name="call_phone">Call</string>
    <string name="calling">Calling tracker</string>
    <string name="wait">Waiting</string>
    <string name="new_sms">New GPS position received.</string>
    <string name="tracker_not_compatible">Tracker not compatible, please contact jo-tracker@hotmail.com</string>
    <string name="message">Message</string>
    <string name="message_free">Function disabled for this release!</string>
    <string name="message_pro">Want to purchase the paid version?</string>
    <string name="message_one_tracker">Only one is allowed tracker!</string>
    <string name="authorization">Authorization:</string>
    <string name="cancel_authorization">Cancel Authorization:</string>
    <string name="auto_track">Auto-track:</string>
    <string name="cancel_auto_track">Cancel Auto-track:</string>
    <string name="monitor_mode">Monitor Mode:</string>
    <string name="tracker_mode">Track Mode:</string>
    <string name="change_password">Change Password:</string>
    <string name="arm">Tracker Arm:</string>
    <string name="setting_arm">Geo-fence</string>
    <string name="disarm">Tracker Disarm:</string>
    <string name="movement_alarm">Movement Alarm:</string>
    <string name="cancel_movement_alarm">Cancel Movement Alarm:</string>
    <string name="overspeed_alert">Overspeed Alert:</string>
    <string name="setting_overspeed_alert">Overspeed Alert</string>
    <string name="cancel_overspeed_alert">Cancel Overspeed Alert:</string>
    <string name="imei_checking">IMEI Checking:</string>
    <string name="gprs_setting">GPRS Setting:</string>
    <string name="gprs_enable">GPRS Enable:</string>
    <string name="gprs_setting_error">Error: Check GPRS Setting</string>
    <string name="cancel_gprs_setting">GPRS Cancel:</string>
    <string name="gprs_disable">GPRS Disable:</string>
    <string name="apn_setting">APN Setting:</string>
    <string name="apn_setting_error">Error: Check APN Setting:</string>
    <string name="apn_user">APN User:</string>
    <string name="apn_user_error">Error: Check APN User and Password</string>
    <string name="apn_password">APN Password:</string>
    <string name="apn_password_error">Error: Check APN Password</string>
    <string name="cut_off_oil_power">Cut off the Oil and Power:</string>
    <string name="resume_oil_power">Resume the Oil and Power:</string>
    <string name="silent_mode">Silent Mode:</string>
    <string name="loud_mode">Loud Mode:</string>
    <string name="reset_tracker">Reset Tracker:</string>
    <string name="check_tracker">Check Tracker:</string>
    <string name="commands">Commands Syntax:</string>
    <string name="commands_trackers">Commands</string>
    <string name="command_send">Command SMS send</string>
    <string name="command">Command:</string>
    <string name="save_success">Successfully stored!</string>
    <string name="cmd_check_status">Check Status</string>
    <string name="cmd_check_imei">Check Imei</string>
    <string name="your_email">Your e-mail</string>
    <string name="set_email">Set here your e-mail</string>
    <string name="enter_email">Enter your e-mail</string>
    <string name="config_app">Configuration</string>
    <string name="name">Name</string>
    <string name="license_number">License Number</string>
    <string name="license_expiration">License Expiration</string>
    <string name="config_sound">Settings Sound</string>
    <string name="set_sound">Sets your preference sound</string>
    <string name="alarm_sound">Your Sound Alarm</string>
    <string name="set_login">Sets your username</string>
    <string name="set_pass">Sets your password</string>
    <string name="your_pass">Your password</string>
    <string name="your_login">Your Username</string>
    <string name="enter_pass">Enter your password</string>
    <string name="enter_login">Enter your username</string>
    <string name="config_language">Settings Language</string>
    <string name="language">Your Language</string>
    <string name="set_language">Sets your preference language</string>
    <string name="btn_call">Call</string>
    <string name="btn_reset">Reset</string>
    <string name="btn_photo">Photo</string>
    <string name="btn_more">More</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_delete">Delete</string>
    <string name="enter_photo_link">Enter your photo link</string>
    <string name="your_photo_link">Your photo link</string>
    <string name="set_photo_link">Sets your photo link</string>
    <string name="config_recorder">Recorder Config</string>
    <string name="autoemail_autosend">Enable emails</string>
    <string name="autoemail_autosend_summary">Enables sending the log file to an email address of your choosing.</string>
    <string name="autoemail_target">Target email addresses</string>
    <string name="autoemail_smtp_category">Email Settings</string>
    <string name="autoemail_username">Username</string>
    <string name="autoemail_username_summary">Username with your email provider</string>
    <string name="autoemail_password">Password</string>
    <string name="autoemail_password_summary">Password with your email provider</string>
    <string name="autoemail_port">Port</string>
    <string name="autoemail_port_summary">SMTP Port</string>
    <string name="autoemail_ssl">Use SSL?</string>
    <string name="autoemail_ssl_summary">Try toggling this if you cannot connect</string>
    <string name="autoemail_server">SMTP Server</string>
    <string name="autoemail_server_summary">Hostname of the SMTP server to use</string>
    <string name="autoemail_choosepreset">Mail Provider</string>
    <string name="autoemail_choosepreset_summary">Pick a provider or choose manual</string>
    <string name="autoemail_smtp_testemail">Test email</string>
    <string name="autoemail_test">Send a test email using the above settings</string>
    <string name="autoemail_sendto_csv">Comma separated email addresses</string>
    <string name="autoemail_from">From address</string>
    <string name="autoemail_from_summary">Some email providers require a from address. Use this only if you need it.</string>
</resources>