<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="autoemail_preferences" >

    <CheckBoxPreference
        android:key="autoemail_enabled"
        android:summary="@string/autoemail_autosend_summary"
        android:title="@string/autoemail_autosend" />

    <EditTextPreference
        android:dialogTitle="@string/autoemail_target"
        android:hint="@string/autoemail_sendto_csv"
        android:key="autoemail_target"
        android:summary="@string/autoemail_sendto_csv"
        android:title="@string/autoemail_target" />

    <PreferenceCategory android:title="@string/autoemail_smtp_category" >
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/autoemail_presets"
            android:entryValues="@array/autoemail_presetvalues"
            android:key="autoemail_preset"
            android:summary="@string/autoemail_choosepreset_summary"
            android:title="@string/autoemail_choosepreset" />

        <EditTextPreference
            android:dialogTitle="@string/autoemail_username"
            android:key="smtp_username"
            android:summary="@string/autoemail_username_summary"
            android:title="@string/autoemail_username" />
        <EditTextPreference
            android:defaultValue=""
            android:dialogTitle="@string/autoemail_from"
            android:key="smtp_from"
            android:summary="@string/autoemail_from_summary"
            android:title="@string/autoemail_from" />
        <EditTextPreference
            android:dialogTitle="@string/autoemail_password"
            android:key="smtp_password"
            android:password="true"
            android:summary="@string/autoemail_password_summary"
            android:title="@string/autoemail_password" />
        <EditTextPreference
            android:defaultValue="smtp.gmail.com"
            android:dialogTitle="@string/autoemail_server"
            android:key="smtp_server"
            android:summary="@string/autoemail_server_summary"
            android:title="@string/autoemail_server" />
        <EditTextPreference
            android:defaultValue="465"
            android:dialogTitle="@string/autoemail_port"
            android:key="smtp_port"
            android:summary="@string/autoemail_port_summary"
            android:title="@string/autoemail_port" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="smtp_ssl"
            android:summary="@string/autoemail_ssl_summary"
            android:title="@string/autoemail_ssl" />

        <Preference
            android:key="smtp_testemail"
            android:summary="@string/autoemail_test"
            android:title="@string/autoemail_smtp_testemail" />
    </PreferenceCategory>

</PreferenceScreen>