<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="category1"
        android:title="@string/config_app" >
        <EditTextPreference
            android:defaultValue="null"
            android:dialogMessage="@string/enter_email"
            android:dialogTitle="@string/your_email"
            android:key="email"
            android:summary="@string/set_email"
            android:title="@string/your_email" />
        <EditTextPreference
            android:defaultValue="null"
            android:dialogMessage="@string/enter_login"
            android:dialogTitle="@string/your_login"
            android:key="login"
            android:summary="@string/set_login"
            android:title="@string/your_login" />
        <EditTextPreference
            android:defaultValue="null"
            android:dialogMessage="@string/enter_pass"
            android:dialogTitle="@string/your_pass"
            android:key="password"
            android:password="true"
            android:summary="@string/set_pass"
            android:title="@string/your_pass" />
        <EditTextPreference
            android:defaultValue="http://www.gpstrackerxy.com/AlarmImages/"
            android:dialogMessage="@string/enter_photo_link"
            android:dialogTitle="@string/your_photo_link"
            android:key="photo_link"
            android:summary="@string/set_photo_link"
            android:title="@string/your_photo_link" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="send_email"
            android:summary="Select to turn on to send emails by application"
            android:title="Send Emails by Aplication" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="category2"
        android:title="@string/config_sound" >
        <ListPreference
            android:defaultValue="alarm"
            android:entries="@array/sounds"
            android:entryValues="@array/sounds_values"
            android:key="sound"
            android:summary="@string/set_sound"
            android:title="@string/alarm_sound" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="category3"
        android:title="@string/config_recorder" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="PREF_RECORD_CALLS"
            android:summary="Select to turn on recording of all calls of Trackers"
            android:title="Record calls" />

        <ListPreference
            android:defaultValue="1"
            android:dialogTitle="Audio source"
            android:entries="@array/audio_source_options"
            android:entryValues="@array/audio_source_values"
            android:key="PREF_AUDIO_SOURCE"
            android:summary="Select the audio source to record from during calls"
            android:title="Audio source" />
        <ListPreference
            android:defaultValue="1"
            android:dialogTitle="Audio format"
            android:entries="@array/audio_format_options"
            android:entryValues="@array/audio_format_values"
            android:key="PREF_AUDIO_FORMAT"
            android:summary="Select the file format to use for call recordings"
            android:title="Recording file format" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="category4"
        android:title="@string/config_language" >
        <ListPreference
            android:defaultValue="en"
            android:entries="@array/languages"
            android:entryValues="@array/languages_values"
            android:key="language"
            android:summary="@string/set_language"
            android:title="@string/language" />
    </PreferenceCategory>

</PreferenceScreen>