<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/call"
        android:icon="@drawable/ic_call"
        android:title="@string/btn_call"/>
    <item
        android:id="@+id/reset"
        android:icon="@drawable/ic_reset"
        android:title="@string/btn_reset"/>
    <item
        android:id="@+id/photo"
        android:icon="@drawable/ic_photo"
        android:title="@string/btn_photo"/>
    <item
        android:id="@+id/more"
        android:icon="@drawable/ic_more"
        android:title="@string/btn_more"/>
    <item
        android:id="@+id/edit"
        android:icon="@drawable/ic_edit"
        android:title="@string/btn_edit"/>
    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/btn_delete"/>

</menu>