<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/popup_frame"
    android:stretchColumns="1,3" >

    <TableRow>

        <TextView
            android:layout_marginRight="10dip"
            android:text="@string/latitude" />

        <TextView android:id="@+id/latitude" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_marginRight="10dip"
            android:text="@string/longitude" />

        <TextView android:id="@+id/longitude" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/myaddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_address" />

        <TextView android:id="@+id/longitude" />
    </TableRow>

</TableLayout>